<resources>
    <string name="app_name">BeaconSystem</string>

    <string name="main_title">비콘을 이용한 버스 결제 시스템 테스팅 어플리케이션</string>
    <string name="signup_title">회원가입</string>

    <string name="textview_id">ID</string>
    <string name="textview_pw">PW</string>
    <string name="textview_check">Check</string>
    <string name="textview_gender">Gender</string>
    <string name="textview_age">Age</string>
    <string name="textview_name">Name</string>
    <string name="textview_money">현재 잔액</string>

    <string name="hint_confirm_pw">PW를 확인합니다</string>
    <string name="hint_input_name">이름을 입력하세요</string>
    <string name="hint_input_id">ID를 입력하세요</string>
    <string name="hint_input_pw">PW를 입력하세요</string>

    <string name="btn_login">로그인</string>
    <string name="btn_signUp">가입하기</string>
    <string name="btn_exit">나가기</string>
    <string name="btn_reset">초기화</string>
    <string name="btn_return">돌아가기</string>
    <string name="btn_Check">중복 확인</string>
    <string name="btn_book">버스 예약</string>
    <string name="btn_charge">요금 충전</string>
    <string name="btn_userInfo">계정 정보</string>

    <string name="radio_male">남성</string>
    <string name="radio_female">여성</string>
    <string name="radio_child">유아</string>
    <string name="radio_youth">청소년</string>
    <string name="radio_adult">성인</string>
    <string name="radio_old">노인</string>
    
    <string name="necessary_input_alert">필수 입력 사항</string>

    <string name="toast1">뒤로 가기 버튼을 이용해 주세요</string>
    <string name="toast2">연결이 되지 않았습니다</string>
    <string name="toast3">가입 가능합니다</string>
    <string name="toast4">중복된 아이디</string>
    <string name="toast5">아이디 중복 체크를 해주세요</string>
    <string name="toast6">가입 실패했습니다</string>
    <string name="toast7">가입 성공했습니다</string>
    <string name="toast8">사용 가능한 아이디입니다</string>
    <string name="toast9">중복된 아이디입니다</string>
    <string name="toast10">이미 가입이 된 사용자입니다</string>
    <string name="toast11">로그아웃 되었습니다</string>
    <string name="toast12">가입이 취소되었습니다</string>

    <string name="alert_title1">중복 확인 메세지</string>
    <string name="alert_logout_title">로그아웃</string>
    <string name="alert_logout_msg">로그아웃을 하시겠습니까?</string>
</resources>
