<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/top_layout_setting"
        tools:context=".CentralActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="2"
                  android:gravity="center"
                  android:text="@string/textview_money" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"
                  android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>

    <LinearLayout style="@style/basic_layout_setting" android:gravity="center">
        <Button style="@style/central_btn_setting" android:text="@string/btn_book"/>
    </LinearLayout>
    <LinearLayout style="@style/basic_layout_setting" android:gravity="center">
        <Button style="@style/central_btn_setting" android:text="@string/btn_charge"/>
    </LinearLayout>
    <LinearLayout style="@style/basic_layout_setting" android:gravity="center">
        <Button style="@style/central_btn_setting" android:text="@string/btn_userInfo"/>
    </LinearLayout>
</LinearLayout>